# slice-n-dice

./: .dockerignore  .envrc.example  Dockerfile  docker-compose.yml  supervisord.conf
.github/workflows/: test-and-build.yml
client/: .gitignore  .npmrc  .prettierrc.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/public/: index.html  manifest.json
client/src/: App.tsx  Calendar.tsx  Fridge.tsx  Login.tsx  MainRoute.tsx  NewRecipeForm.tsx  QueryDevtools.tsx  Recipes.tsx  TopBar.tsx  auth.tsx  axiosHelpers.ts  dayjs.ts  domain.ts  gateway.ts  index.css  index.tsx  pages.tsx  theme.ts
client/src/recipes/: EditRecipeForm.tsx  NewRecipeBodyField.tsx  NewRecipeForm.tsx  RecipeBodyField.tsx  RecipeForm.tsx  Recipes.tsx  ViewRecipe.tsx  ViewRecipeDialog.tsx
client/src/shared/: ButtonLink.tsx  ErrorBoundary.tsx  LoadingText.tsx  Nbsp.tsx  dbg.ts  typeUtils.ts  useCurrentPage.ts  useInterval.tsx
client/src/shared/text-editor/: RichTextEditor.tsx  customBlock.tsx  htmlToRawState.ts  stateToHtml.ts
gateway/: go.mod  main.go
scripts/: drop-integration-dbs  gen-test-data
server/: Cargo.toml  Makefile
server/migrations/: 20210509120000_create_recipes_table.sql  20210509130000_create_days_table.sql  20210704185222_adds_cheat_columns_to_days.sql  20210724093037_adds_quick_to_recipes_table.sql  20211222115132_create_foods_table.sql  20220618040030_adds_body_to_recipes.sql  20220817161419_recipe_body_jsonb_to_text.sql  2_create_days_table.sql
server/src/: domain.rs  handlers.rs  html_filter.rs  lib.rs  main.rs  repository.rs  serde_date.rs  tide_utils.rs
server/src/days/: handlers.rs  repository.rs
server/src/foods/: handlers.rs  mod.rs  repository.rs
server/src/recipes/: handlers.rs  repository.rs
server/tests/: integration.rs  integration_test.rs
server/tests/data/: example.html
server/tests/with_db/: integration_scaffold.rs  mod.rs  recipes_integration_tests.rs
